--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Satyajit Mishra | JS Beginner Projects</title>
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="stylesheet" href="src/css/darkMode.css">
   </head>
   <body>
     <div class="container">
@@ -187,4 +188,5 @@ Created a secure password generator using HTML, CSS, and JavaScript. Users can c
       </div>
     </div>
   </body>
+    <script src="src/js/script.js"></script>
 </html>
