add dark mode toogle button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="src/css/darkMode.css">
   </head>
   <body>
+    /************************ Dark Mode Toggle Button ****************************/
+    
+    <button class="theme-toggle-btn" id="themeToggle">
+      <i class="fas fa-moon"></i>
+    </button>
     <div class="container">
      
       <!-- Left Card - Profile -->
