--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="src/css/darkMode.css">
   </head>
   <body>
-    /************************ Dark Mode Toggle Button ****************************/
-    
+    <!-- Dark Mode Toggle Button  -->
+     
     <button class="theme-toggle-btn" id="themeToggle">
       <i class="fas fa-moon"></i>
     </button>
