Some element add

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Satyajit Mishra > Portfolio || JS Beginner Project</title>
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="src/css/darkMode.css">
@@ -49,9 +49,9 @@
           <div class="profile-img">
             <img src="src/img/profileLogo-min.png" alt="Satyajit Mishra" />
           </div>
-          <h1 class="name" id="userName"></h1>
+          <h1 class="name" id="userName"> Satyajit Mishra</h1>
           <p class="pronouns">(he/him)</p>
-          <h2 class="title" id="dev-role"></h2>
+          <h2 class="title" id="dev-role">Front-End Developer</h2>
           <button class="email-btn"> <a href="https://forms.gle/jcFz9mib4PpGg3zQ8"><i class="fa-solid fa-envelope" style="fill: aliceblue;"></i></a> CONNECT WITH ME </button>
           <div class="social-icons">
             <a href="https://x.com/satyajitmishr0">
