Add new project

--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
 
           <div class="projects-grid">
             <!-- Project 1 -->
+             <div class="project-card reveal delay-100">
+
+              <div class="project-img">
+                <img src="src/img/UI-Bg.jpg" alt="Project 1" />
+              </div>
+              <div class="project-info">
+                <h3 class="project-title">👨‍💻 LaunchPad UI</h3>
+                <p class="project-desc">
+                  Built a simple, interactive UI using HTML, CSS, and JavaScript. It supports Draggable Cards, real-time news,TO-do, functions.
+                </p>
+                <a href="src/LAUNCHPAD UI/launchpadUi.html" class="project-link">PREVIEW</a>
+              </div>
+            </div>
             <div class="project-card reveal delay-100">
 
               <div class="project-img">
