Add Favicon & minor changes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Satyajit Mishra > Portfolio || JS Beginner Project</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <title>Portfolio - by Satyajit</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="LaunchPad UI is a custom personal dashboard with Google Search, Weather, Quotes, Tasks, and Quick App links, built by Satyajit.">
+  <meta name="keywords" content="LaunchPad, dashboard, Satyajit, Google search, weather, quotes, productivity, web app">
+  <meta name="author" content="Satyajit">
+<meta name="author" content="Satyajit">
+<meta name="description" content="I'm Satyajit, a passionate web developer. Explore my portfolio dashboard with Google search, task manager, weather updates, quotes, and quick app links.">
+<meta name="keywords" content="Satyajit, portfolio, web developer, front-end, dashboard UI, projects, HTML, CSS, JavaScript, responsive design, personal site">
+  <!-- Open Graph for Social Sharing -->
+  <meta property="og:title" content="LaunchPad UI - by Satyajit" />
+  <meta property="og:description" content="A beautiful and functional personal dashboard with weather, tasks, quotes, and quick access tools." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://satyajitmishra.com/path-to-thumbnail.jpg" />
+  <meta property="og:url" content="https://satyajitportfolio-tawny.vercel.app/" />
+
+  <!-- Favicon and Stylesheets -->
+  <link rel="icon" type="image/png" href="src/img/favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="src/css/style.css">
+  <link rel="stylesheet" href="src/css/animations.css">
+  <link rel="stylesheet" href="src/css/responsive.css">
+  <link rel="stylesheet" href="src/css/darkTheme.css">
     <link rel="stylesheet" href="src/css/main.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="src/css/darkMode.css">
