--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Portfolio - by Satyajit</title>
 
   <!-- SEO Meta Tags -->
+  <meta name="google-site-verification" content="EIxwtdIT-WDvAqQkSb2ScBjet1FWl9cLQd2yHhCG9mo" />
   <meta name="google-site-verification" content="p0XEm4xm2jRipwvxdwt6BJL5yIDma2TOecpyoZ_Q0Mc" />
   <meta name="description"
     content="Portfolio of Satyajit Mishra - Front-end developer skilled in JavaScript, HTML, and CSS.">
