Add Battery info

--- a/src/LAUNCHPAD UI/launchpadUi.html
+++ b/src/LAUNCHPAD UI/launchpadUi.html
@@ -31,9 +31,10 @@
       <!-- Time Card -->
       <div class="card" id="card1">
         <div class="indicator blue"></div>
-        <div class="card-title">Local Time</div>
+        <div class="card-title">⏲️ Local Time</div>
         <div class="time" id="current-time">--:--</div>
         <div class="date" id="current-date">--/--/----</div>
+        <div class="battery" id="batterypersentage"> </div>
       </div>
       
       <!-- Reminders Card -->
@@ -66,7 +67,6 @@
     <i class="fas fa-cloud"></i>
   </div>
 </div>
-
       
       <!-- Quick Apps -->
       <div class="card" id="card5">
@@ -113,4 +113,5 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
   <script src="src/js/script.js"></script>
+  
 </html>
