UI minor changes

--- a/src/LAUNCHPAD UI/launchpadUi.html
+++ b/src/LAUNCHPAD UI/launchpadUi.html
@@ -94,6 +94,12 @@
           <button class="app-btn whatsapp" title="whatsapp">
             <div class="app-icon"><i class="fa-brands fa-whatsapp fa-fade"></i></div>Whatsapp
           </button>
+          <button class="app-btn facebook" title="facebook">
+            <div class="app-icon"><i class="fa-brands fa-facebook fa-fade"></i></div>Facebook
+          </button>
+          <button class="app-btn leetcode" title="leetcode">
+            <div class="app-icon"><i class="fa-brands fa-code fa-fade"></i></div>Leetcode
+          </button>
           <button class="app-btn codepen" title="CodePen">
             <div class="app-icon"><i class="fa-brands fa-codepen fa-fade"></i></div>Code Pen
           </button>
