--- a/src/LAUNCHPAD UI/launchpadUi.html
+++ b/src/LAUNCHPAD UI/launchpadUi.html
@@ -98,7 +98,7 @@
             <div class="app-icon"><i class="fa-brands fa-facebook fa-fade"></i></div>Facebook
           </button>
           <button class="app-btn leetcode" title="leetcode">
-            <div class="app-icon"><i class="fa-brands fa-code fa-fade"></i></div>Leetcode
+            <div class="app-icon"><i class="fa-regular fa-code fa-fade"></i></div>Leetcode
           </button>
           <button class="app-btn codepen" title="CodePen">
             <div class="app-icon"><i class="fa-brands fa-codepen fa-fade"></i></div>Code Pen
