--- a/src/LAUNCHPAD UI/launchpadUi.html
+++ b/src/LAUNCHPAD UI/launchpadUi.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title> LaunchPad UI || by Satyajit</title>
+  <title> LaunchPad UI | Easy Access</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="stylesheet" href="src/css/animations.css">
   <link rel="stylesheet" href="src/css/responsive.css">
   <link rel="stylesheet" href="src/css/darkTheme.css">
-  <link rel="icon" type="image/png" href="src/favicon.ico">
+  <!-- <link rel="icon" type="image/png" href="src/favicon.ico"> -->
 </head>
 <body>
  
