--- a/src/LAUNCHPAD UI/launchpadUi.html
+++ b/src/LAUNCHPAD UI/launchpadUi.html
@@ -130,6 +130,7 @@
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="src/js/script.js"></script>
 
 </html>
